--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="hero-image">
             <div class="glow"></div>
-            <img src="./public/images/profile.png" alt="Bharat Rana">
+            <img src="./public/images/1692666482742-removebg.png" alt="Bharat Rana" class="profile">
         </div>
     </section>
 
@@ -66,7 +66,7 @@
     <section class="about" id="about">
         <div class="hero-image">
             <div class="glow"></div>
-            <img src="./public/images/profile.png" alt="Bharat Rana">
+            <img src="./public/images/1692666482742-removebg.png" alt="Bharat Rana" class="profile">
         </div>
         <div class="about-content">
             <h2>About <span>Me</span></h2>
