update auto profession

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./public/images/profile.png" type="image/x-icon">
     <title>Bharat Rana - Web Designer Portfolio</title>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12" defer></script>
     <script src="./src/main.js" defer></script>
 </head>
 <body>
@@ -27,7 +28,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Hello, I'm<br>Bharat Rana</h1>
-            <h2>And I'm a Web <span class="designer">Designer</span></h2>
+            <h2>And I'm a <span class="profession"></span></h2>
             <p>Welcome to my web developer portfolio! I'm Bharat Rana, a skilled web designer and web developer with a passion for creating beautiful, responsive, and user-friendly websites. I've worked on a variety of web projects.</p>
             <div class="social-links">
                 <a href="#" class="social-icon"><img src="./public/images/linkin.png" alt="LinkedIn"></a>
