--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="navigation">
-        <div class="logo">Port<span>folio</span></div>
+        <div class="logo"><img src="./public/images/logo.svg" alt="logo"> <p >Bharat Rana</p></div>
         <button class="menu-btn" aria-controls="primary-navigation" aria-expanded="false">
           <img src="./public/images/menu.svg" alt="menu" id="menu">
           <img src="./public/images/cross.svg" style="display: none;" alt="cross" id="cross">
@@ -53,10 +53,12 @@
                 <h3>150+</h3>
                 <p>Happy Customer</p>
             </div>
+            <div class="line"></div>
             <div class="stat-item">
                 <h3>100+</h3>
                 <p>Projects</p>
             </div>
+            <div class="line"></div>
             <div class="stat-item">
                 <h3>7.8/10</h3>
                 <p>Rating</p>
